--- a/package.json
+++ b/package.json
@@ -2,25 +2,26 @@
   "name": "gmeet-slash-cmd",
   "description": "Slack integration for Google Meet",
   "author": "Yuki Kodama<endflow.net@gmail.com>",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "MIT",
   "publish": false,
   "main": "handler.js",
   "dependencies": {
     "aws-sdk": "^2.668.0",
-    "googleapis": "^49.0.0",
-    "query-string": "^6.12.1",
+    "googleapis": "^144.0.0",
+    "query-string": "^9.1.1",
     "source-map-support": "^0.5.19",
-    "uuid": "^8.0.0"
+    "ts-standard": "^12.0.2",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.51",
-    "@types/node": "^13.13.4",
-    "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "@types/node": "^22.10.7",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "serverless-webpack": "^5.3.1",
-    "ts-loader": "^7.0.2",
-    "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-node-externals": "^1.7.2"
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "webpack": "^5.97.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
